--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+10.02.2025
+    - Fixed: Midi strip 'LCD' seven-segment patch number readouts not mouse-wheeling properly. (Tim)
+      Somehow LCDPatchEdit::wheelEvent() got changed several years ago. Fixed.
+      Also fixed drum list entry cells 'Shift + Wheel' same behaviour.
 06.02.2025
     - LV2: Fixed some plugins can't operate controls when there is automation, even in stop mode. (Tim)
       Implemented missing LV2 UI Touch extension.
