Replaced all popen with QProcess. Rewrote grepmidi.

--- a/src/share/locale/CMakeLists.txt
+++ b/src/share/locale/CMakeLists.txt
@@ -61,6 +61,7 @@ if (UPDATE_TRANSLATIONS)
             vam
             components
             plugin_scan_module
+            grepmidi
             )
 endif (UPDATE_TRANSLATIONS)
 
