--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+16.05.2025
+    - DSSI: Fixed: Recent ALSA changes give error inside system header dssi.h (Tim)
+      #warning "use #include <alsa/asoundlib.h>, <alsa/seq_event.h> should not be used directly"
+      Unfortunately seq_event.h is included inside dssi.h. Made local copy of dssi.h with corrections.
+
 13.05.2025
     * Spring 2025 large fixes and features: (Tim)
 
