Fixed issue 1307: Utf8 names not stored correctly.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+25.08.2025
+    - Fixed issue 1307: Utf8 names not stored correctly. (Tim)
+      Fixed Xml::strTag() not storing utf8 correctly.
+    - Eliminated Xml::Xml(FILE*) and all code using FILE*.
+      All xml calling code uses either QFile or QString or char* now.
 17.08.2025
     - Fixed issue 1299: Regression vst controls/presets. (Tim)
       Caused by fixes at 13.05.2025 and before.
