--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+01.09.2025
+    - Fixed issue 1302: Wave editor issues, split parts, external editor, sometimes crashes. (Tim)
+      When splitting wave or midi events we want a duplicate, not a clone.
+    - Fixed crashes with external editing. Rewrote and simplified WaveCanvas::getSelection().
+      Tested OK with split parts, hidden or partially hidden events, and functions menu.
 17.08.2025
     - Fixed issue 1299: Regression vst controls/presets. (Tim)
       Caused by fixes at 13.05.2025 and before.
