--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,6 @@
+27.10.2025
+    - Fixed issue 1313 for rack plugins: Settings not saved or reloaded correctly. (Tim)
+      Regression from 13.05.2025.
 14.10.2025
     - Fixed issue 1313: Settings of LV2 synths are not saved or reloaded correctly. (Tim)
       Regression from 13.05.2025.
